# lightrag-cv

./: .env.example  .gitignore  README.md  backup.env  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.bmad-core/: install-manifest.yaml
app/: README.md  __init__.py  requirements.txt
app/cigref_ingest/: __init__.py  analyze_cigref_parsing.py  cigref_1_parse.py  cigref_2_import.py  enrich_cigref_hierarchy.py  ingest_cigref.py  ingest_cigref_batched.py  prepare_cigref_for_lightrag.py  test_cigref_parsing.py  test_header_extraction.py
app/cv_ingest/: __init__.py  classify_cvs_with_llm.py  create_parsed_manifest.py  cv1_download.py  cv2_parse.py  cv3_classify.py  cv4_import.py  (+5 more)
data/: cv-ingestion-validation_2025-11-07_23-37-02.md
docs/: PLANNING.md  architecture.md  cigref-ingestion-validation.md  cigref-parsing-validation.md  cv-parsing-validation.md  docker-volume.md  docling-api.md  ingestion-process.md  openwebui-setup.md  prd.md  setup.md  test-data-setup.md  test-data.md
scripts/: analyze-cigref-parsing.py  classify-cvs-with-llm.py  config.py  create-parsed-manifest.py  download-cvs.py  download_cv_samples.py  download_sample_cvs.sh  enrich-cigref-hierarchy.py  explore_and_download_cvs.py  health-check.py  health-check.sh  ingest-cigref-batched.py  ingest-cigref.py  parse-cvs.py  prepare-cigref-for-lightrag.py  query-entities.sql  requirements.txt  restart-docling-gpu.sh  select-validation-sample.py  setup.sh  start-docling-gpu.sh  test-cigref-parsing.py  test-header-extraction.py  validate-classification.py  validate-ollama.py
(+238 files in other folders)
